<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="au.edu.sydney.comp5216.chef_inprogress.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_inventory"
        android:name="au.edu.sydney.comp5216.chef_inprogress.ui.inventory.InventoryFragment"
        android:label="@string/title_inventory"
        tools:layout="@layout/fragment_inventory" />

    <fragment
        android:id="@+id/navigation_add"
        android:name="au.edu.sydney.comp5216.chef_inprogress.ui.add.AddFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_add_old" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="au.edu.sydney.comp5216.chef_inprogress.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="au.edu.sydney.comp5216.chef_inprogress.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>